--- a/.settings
+++ b/.settings
@@ -206,41 +206,41 @@ Geometry=[18,20,210,781]
 Path="pintaScreen.gambas"
 
 [OpenFile]
-File[1]=".src/FMain.form:0.0"
-Active=2
-File[2]=".src/FMain.class:31.35"
+File[1]=".src/FMain.form"
+Active=6
+File[2]=".src/FMain.class:30.274"
 File[3]=".src/rectangulo.class:19.33"
 File[4]=".src/RectPunteado.class:19.0"
-File[5]=".src/elipse.class:4.33"
-File[6]=".src/flecha.class:42.97"
-File[7]=".src/ColorearTriangulo.class:0.19"
-File[8]=".src/Propiedades/FormCuadroPropiedades.form:0.0"
+File[5]=".src/elipse.class:0.33"
+File[6]=".src/flecha.class:3.79"
+File[7]=".src/ColorearTriangulo.class:0.6"
+File[8]=".src/Propiedades/FormCuadroPropiedades.form"
 File[9]=".src/Propiedades/FormCuadroPropiedades.class:22.109"
 File[10]=".src/Propiedades/ButtonBoxDobleTag.class:0.18"
-File[11]=".src/FormEditarTexto.form:0.0"
+File[11]=".src/FormEditarTexto.form"
 File[12]=".src/FormEditarTexto.class:13.19"
 File[13]=".src/ModuleAbrirGuardar.module:8.81"
 File[14]=".src/linea.class:19.0"
 File[15]=".src/ManoAlzadaFlecha.class:19.0"
-File[16]=".src/ManoAlzada.class:2.20"
+File[16]=".src/ManoAlzada.class:0.20"
 File[17]=".src/Mmain.module:4.2"
-File[18]=".src/FormAcercaDE.form:0.0"
-File[19]=".src/FormAcercaDE.class:52.70"
+File[18]=".src/FormAcercaDE.form"
+File[19]=".src/FormAcercaDE.class:23.42"
 File[20]=".src/Dibujo.class:8.0"
 File[21]=".src/Texto.class:23.27"
 File[22]=".src/Subrayador.class:19.0"
 File[23]=".src/Oscurece.class:94.33"
 File[24]=".src/Numerador.class:0.27"
-File[25]=".src/chincheta.class:2.31"
+File[25]=".src/chincheta.class:0.31"
 File[26]=".src/classUnitarias/_UnitTestLauncher.module:59.24"
 File[27]=".src/CapaGris.class:18.37"
-File[28]=".src/Aclara.class:2.29"
+File[28]=".src/Aclara.class:0.29"
 File[29]=".src/classUnitarias/UnitTestTask.class:33.8"
 File[30]=".src/EcuacionesRecta.module:22.43"
-File[31]=".src/fmensaje.form:0.0"
+File[31]=".src/fmensaje.form"
 File[32]=".src/fmensaje.class:6.0"
-File[33]=".src/FormAyuda.form:0.0"
-File[34]=".src/ModuleComun.module:17.58"
+File[33]=".src/FormAyuda.form"
+File[34]=".src/ModuleComun.module:23.5"
 File[35]=".src/ModuleSonido.module:0.8"
 Count=35
 
