--- a/.settings
+++ b/.settings
@@ -1,9 +1,6 @@
 [Bookmarks]
 FormFondo=[206]
 
-[Breakpoints]
-Count=0
-
 [DebugWindow]
 Count=0
 
@@ -236,53 +233,17 @@ Geometry=[18,20,210,781]
 Path="pintaScreen.gambas"
 
 [OpenFile]
-File[1]=".src/FMain.form"
-Active=2
-File[2]=".src/FMain.class:0.105"
-File[3]=".src/rectangulo.class:19.33"
-File[4]=".src/RectPunteado.class:19.0"
-File[5]=".src/elipse.class:51.47"
-File[6]=".src/flecha.class:3.79"
-File[7]=".src/ColorearTriangulo.class:21.27"
-File[8]=".src/Propiedades/FormCuadroPropiedades.form"
-File[9]=".src/Propiedades/FormCuadroPropiedades.class:22.109"
-File[10]=".src/Propiedades/ButtonBoxDobleTag.class:0.18"
-File[11]=".src/FormEditarTexto.form"
-File[12]=".src/FormEditarTexto.class:0.22"
-File[13]=".src/ModuleAbrirGuardar.module:170.50"
-File[14]=".src/linea.class:49.9"
-File[15]=".src/ManoAlzadaFlecha.class:19.0"
-File[16]=".src/ManoAlzada.class:0.20"
-File[17]=".src/Mmain.module:4.2"
-File[18]=".src/FormAcercaDE.form"
-File[19]=".src/FormAcercaDE.class:23.42"
-File[20]=".src/Dibujo.class:8.0"
-File[21]=".src/Texto.class:38.42"
-File[22]=".src/Subrayador.class:19.0"
-File[23]=".src/Oscurece.class:94.33"
-File[24]=".src/Numerador.class:0.27"
-File[25]=".src/chincheta.class:35.248"
-File[26]=".src/classUnitarias/_UnitTestLauncher.module:59.24"
-File[27]=".src/CapaGris.class:18.37"
-File[28]=".src/Aclara.class:25.96"
-File[29]=".src/classUnitarias/UnitTestTask.class:33.8"
-File[30]=".src/EcuacionesRecta.module:0.0"
-File[31]=".src/fmensaje.form"
-File[32]=".src/fmensaje.class:6.0"
-File[33]=".src/FormAyuda.form"
-File[34]=".src/ModuleComun.module:21.85"
-File[35]=".src/ModuleSonido.module:0.8"
-Count=45
-File[36]="modos/Modo_Vertical.png"
-File[37]="modos/Modo_Horizontal.png"
-File[38]="modos/ModoSinEscalar.png"
-File[39]="modos/modo_actual.png"
-File[40]=".src/FormColor.form"
-File[41]=".src/FormFondo.form"
-File[42]=".src/FormFondo.class:39.55"
-File[43]=".src/formularioAndando.form"
-File[44]=".src/TecladoVirtual.class:47.276"
-File[45]="README.md:90.2"
+File[1]=".src/FormAcercaDE.form"
+File[2]=".src/FMain.form"
+File[3]=".src/Texto.class:2.107"
+File[4]=".src/Oscurece.class:0.0"
+File[5]=".src/fmensaje.form"
+File[6]=".src/FMain.class:18.422"
+Active=6
+Count=6
+
+[Package]
+Dir="~/Descargas/"
 
 [Watches]
 Count=1
