--- a/.settings
+++ b/.settings
@@ -239,8 +239,9 @@ File[3]=".src/Texto.class:2.107"
 File[4]=".src/Oscurece.class:0.0"
 File[5]=".src/fmensaje.form"
 File[6]=".src/FMain.class:18.422"
-Active=6
-Count=6
+Active=7
+Count=7
+File[7]=".src/Numerador.class:0.182"
 
 [Package]
 Dir="~/Descargas/"
