--- a/.project
+++ b/.project
@@ -23,6 +23,7 @@ Address=jusabejusabe@gmail.com
 Url=http://www.jsbsan.blogspot.com
 License=General Public License
 PackageName=pintascreen-0.0.79
+PackageVersion=2
 CreateEachDirectory=1
 Packager=1
 Systems=debian
